# ai-assisted-quality-platform

./: .dockerignore  .env  .env.example  DESIGN.md  Dockerfile  LICENSE  README.md  UI_DESIGN.md  docker-compose.yml  pyproject.toml
frontend/: package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx  index.css
frontend/src/api/: client.ts
frontend/src/components/: ConfidenceBadge.tsx  Layout.tsx  ScaffoldViewer.tsx  SkillPanel.tsx  StatusBadge.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  input.tsx  textarea.tsx
frontend/src/pages/: AnalyzePage.tsx  RAAReviewPage.tsx  RequirementsListPage.tsx  TGAReviewPage.tsx
frontend/src/types/: api.ts
src/qa_platform/: __init__.py  config.py
src/qa_platform/agents/requirement_analysis/: __init__.py  agent.py
src/qa_platform/agents/requirement_analysis/skills/: ambiguity_detector.py  confidence_scorer.py  entity_extractor.py  jira_parser.py  json_generator.py  openapi_parser.py  prd_parser.py  rag_enricher.py  requirement_extractor.py  (+2 more)
src/qa_platform/agents/test_generation/: __init__.py  agent.py
src/qa_platform/api/: main.py
src/qa_platform/api/routes/: meta.py  requirements.py  tests.py
src/qa_platform/infrastructure/: job_registry.py  llm_client.py  llm_errors.py  review_store.py  state_store.py  vector_store.py
src/qa_platform/orchestration/: activities.py  router.py  workflow.py
src/qa_platform/schemas/: __init__.py  common.py  requirements.py  test_cases.py
tests/: conftest.py
tests/test_raa/: test_agent.py
tests/test_tga/: test_agent.py
(+12 files in other folders)
